--- a/index.html
+++ b/index.html
@@ -10,38 +10,45 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="app">
+        <div id="container" class="d-flex">
+            <aside>
+                <!-- user navbar -->
+                <nav class="navbar" style="background-color: white;">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="#">
+                        <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                        Bootstrap
+                        </a>
+                    </div>
+                    <!-- user's friend message tabs -->
+                    <div class="card" >
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item active-card">An item</li>
+                            <li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li>
+                        </ul>
+                    </div>
+                </nav>
+            </aside>
+            <main>
+                
+                <nav class="navbar" style="background-color: white;">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="#">
+                        <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                        Bootstrap
+                        </a>
+                    </div>
+                </nav>
+                
+            </main>
 
-        <div id="app">
-            <div id="container" class="d-flex">
-                <aside>
-                    <nav class="navbar" style="background-color: #e3f2fd">
-                        <div class="container-fluid">
-                          <a class="navbar-brand" href="#">
-                            <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                            Bootstrap
-                          </a>
-                        </div>
-                      </nav>
-
-
-                </aside>
-                <main>
-                    <nav class="navbar" style="background-color: #e3f2fd">
-                        <div class="container-fluid">
-                          <a class="navbar-brand" href="#">
-                            <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                            Bootstrap
-                          </a>
-                        </div>
-                      </nav>
-                </main>
-
-            </div>
         </div>
+    </div>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
