aggiunta search bar

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
                         Bootstrap
                         </a>
                     </div>
+                    <!-- search bar -->
+                    <div>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form>
+                    </div>
+                  
                     <!-- user's friend message tabs -->
                     <div class="card" >
                         <ul class="list-group list-group-flush">
