search bar width

--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
                         </a>
                     </div>
                     <!-- search bar -->
-                    <div>
+                    <div id="search-bar-container">
+                        <!-- magari in seguito tolgo form e lo faccio più semplice perché non mi serve così al momento -->
                         <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
+                            <button class="btn btn-outline-success" type="submit">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </button>
+                            <input style="width: 100%;" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         </form>
                     </div>
                   
