aside notify bar micro

--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
                         Bootstrap
                         </a>
                     </div>
+                    <!-- notification bar -->
+                    <div id="notify-bar">
+                        <img src="img/bell-slash-regular.svg" alt="">
+                        <span>
+                            Ricevi notifiche di nuovi messaggi
+                        </span>
+                        <a href="#">
+                            Attiva notifiche desktop
+                        </a>
+                    </div>
+                    
+
                     <!-- search bar -->
                     <div id="search-bar-container">
                         <!-- magari in seguito tolgo form e lo faccio più semplice perché non mi serve così al momento -->
