user's friend list macro

--- a/index.html
+++ b/index.html
@@ -49,10 +49,23 @@
                     </div>
                   
                     <!-- user's friend message tabs -->
-                    <div class="card" >
+                    <div id="user-cards-container" class="card" >
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item active-card">An item</li>
                             <li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li>
+                            <li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li><li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li><li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li><li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li><li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li><li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li><li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li><li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li><li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li><li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li><li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li><li class="list-group-item">A second item</li>
                             <li class="list-group-item">A third item</li>
                         </ul>
                     </div>
