--- a/index.html
+++ b/index.html
@@ -51,14 +51,11 @@
                     <!-- user's friend message tabs -->
                     <div id="user-cards-container" class="card" >
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item active-card">An item</li>
-                            <li class="list-group-item">A second item</li>
-                            <li class="list-group-item">A third item</li>
-                            <li class="list-group-item">A second item</li>
-                            <li class="list-group-item">A third item</li><li class="list-group-item">A second item</li>
-                            <li class="list-group-item">A third item</li><li class="list-group-item">A second item</li>
-                            <li class="list-group-item">A third item</li><li class="list-group-item">A second item</li>
-                            <li class="list-group-item">A third item</li>
+                            <li v-for="(user, index) in users" class="list-group-item active-card">
+                                <img :src="user.avatar" :alt="user.name -avatar">
+                                <span>{{ user.messages[user.messages.length - 1] }}</span>
+                            </li>
+
                             
                         </ul>
                     </div>
@@ -74,6 +71,12 @@
                         </a>
                     </div>
                 </nav>
+                <div id="message-tab">
+                    <input type="text" placeholder="Scrivi un messaggio">
+                    <!-- <div v-for="message in ">
+
+                    </div> -->
+                </div>
                 
             </main>
 
