added message bar

--- a/index.html
+++ b/index.html
@@ -75,10 +75,17 @@
                     </div>
                 </nav>
                 <div id="message-tab">
-                    <input type="text" placeholder="Scrivi un messaggio">
-                    <!-- <div v-for="message in ">
+                                        <!-- <div v-for="message in ">
 
                     </div> -->
+
+                    <div id="message-bar">
+                        <i class="fa-regular fa-face-smile"></i>
+                        <input type="text" placeholder="Scrivi un messaggio">
+                        <i class="fa-solid fa-microphone"></i>
+                    </div>
+
+
                 </div>
                 
             </main>
