--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                                 <img :src="user.avatar" :alt="user.name -avatar">
                                 <div>
                                     <h6>{{ user.name }}</h6>
-                                    <span>{{ user.messages[user.messages.length - 1].text }}</span>
+                                    <span v-if="user.messages.status === received">{{ user.messages[user.messages.length - 1].text }}</span>
+                                    
                                 </div>
                             </li>
 
@@ -76,7 +77,7 @@
                 </nav>
                 <!-- messages tab of selected friend  -->
                 <div id="message-tab">
-                    <div v-for="(message, index) in users[activeUser].messages">
+                    <div v-for="(message, index) in users[activeUser].messages" >
                         <div class="message-box received-messages" v-if="message.status === 'received'">
                             <span> {{ message.text }} </span>
                             <span class="message-time">{{ message.date}} </span>
@@ -86,7 +87,7 @@
                             <span> {{ message.text }} </span>
                             <span class="message-time">{{ message.date}} </span>
                         </div>
-                        <pre>{{ message.status }}</pre>
+                        <pre>{{ activeUser }}</pre>
 
                        
                     </div> 
@@ -105,6 +106,9 @@
     </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+<script src="
+https://cdn.jsdelivr.net/npm/luxon@3.3.0/build/global/luxon.min.js
+"></script>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
