--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <input style="width: 100%;" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" v-model="searchInput" 
                             @keyup="searchNames()"
                             >
-                            <pre>{{ searchInput }}</pre>
+                            <!-- <pre>{{ searchInput }}</pre> -->
                         </form> 
                     </div>
                   
@@ -91,20 +91,23 @@
                         </a>
                     </div>
                 </nav>
-                <!-- messages tab of selected friend  -->
+                <!-- messages tab of selected friend con aggiunta di bootstrap dropdown -->
                 <div id="message-tab"> <!-- nome alternativo messages container -->
-                    <div v-for="(message, index) in users[activeUser].messages" >
-                        <div class="message-box received-messages" v-if="message.status === 'received'">
+                    <div v-for="(message, index) in users[activeUser].messages" class="dropdown">
+                        <div class="message-box received-messages" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" v-if="message.status === 'received'">
                             <span> {{ message.text }} </span>
                             <span class="message-time">{{ message.date}} </span>
 
                         </div>
-                        <div class="message-box sent-messages" v-else>
+                        <div class="message-box sent-messages" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" v-else>
                             <span> {{ message.text }} </span>
                             <span class="message-time">{{ message.date}} </span>
                         </div>
                         <!-- <pre>{{ activeUser }}</pre> -->
-
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Message info</a></li>
+                            <li><a class="dropdown-item" href="#">Delete message</a></li>
+                          </ul>
 
                        
                     </div> 
