--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <!-- messages tab of selected friend con aggiunta di bootstrap dropdown -->
                 <div id="message-tab"> <!-- nome alternativo messages container -->
                     <div v-for="(message, index) in activeUser.messages" class="dropdown">
-                        <div class="message-box received-messages" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" v-if="message.status === 'received'">
+                        <div class="message-box received-messages"  v-if="message.status === 'received'">
                             <span> {{ message.text }} </span>
                             <span class="message-time">{{ message.date}} </span>
 
@@ -102,12 +102,13 @@
                         <div class="message-box sent-messages" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" v-else>
                             <span> {{ message.text }} </span>
                             <span class="message-time">{{ message.date}} </span>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Message info</a></li>
+                                <li><a class="dropdown-item" href="#" @click="deleteSelectedMessageSent(message, activeUser.messages)">Delete message</a></li>
+                              </ul>
                         </div>
                         <!-- <pre>{{ activeUser }}</pre> -->
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Message info</a></li>
-                            <li><a class="dropdown-item" href="#">Delete message</a></li>
-                          </ul>
+
 
                        
                     </div> 
