data aggiunta in cards friends last message

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                                 <div>
                                     <h6>{{ user.name }}</h6>
                                     <span v-if="user.messages.status === received">{{ getLastMessageReceivedFromUser( user ) }}</span>
+                                    <!-- aggiungere data in un'altro span  -->
                                     
                                 </div>
                             </li>
