padding added to mesage-tab

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="app">
         <div id="container" class="d-flex">
             <aside>
-                <!-- user navbar -->
+                <!-- user navbar da bootstrap -->
                 <nav class="navbar" style="background-color: white;">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="#">
