--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <aside>
                 <!-- user navbar da bootstrap -->
                 <nav class="navbar" style="background-color: white;">
-                    <div class="container-fluid">
+                    <div id="user-profile-navbar" class="container-fluid ">
                         <a class="navbar-brand" href="#">
-                        <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                        Bootstrap
+                        <img src="img/Avatar-four.svg" alt="user-photo"  class="d-inline-block align-text-top">
+                        {{ loggedUserName }}
                         </a>
                     </div>
                 </nav>
